# paf

./: .dockerignore  .dvcignore  .editorconfig  .flake8  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  agents.md  carla_traffic_rules.md  clone_repo.sh  dc-run-file.sh  pc_setup.md  pc_setup_admin.sh  pc_setup_user.sh  pyrightconfig.json  pytest.ini  ruff-strict.toml  ruff.toml  rviz2.rviz  setup_env.sh  xhost_enable.sh
code-ros1/control/: CMakeLists.txt  package.xml
code-ros1/control/src/: pure_pursuit_controller.py
code-ros1/localization/: CMakeLists.txt
code-ros1/localization/config/: odometry_covariance.cfg  sensor_covariances.yaml
code-ros1/localization/src/: kalman_filter.py
code-ros1/localization/src/evaluation/: position_heading_filter_debug_node.py  save_filter_data.py  visualize_filter_comparison.py
code-ros1/mapping/: package.xml
code-ros1/mapping/ext_modules/: .gitignore
code-ros1/mapping/ext_modules/mapping_common/: shape.py
code-ros1/mapping/msg/: TrackingInfo.msg  TypeStopMark.msg
code-ros1/mapping/src/: debug_wrapper.py
code-ros1/mapping/tests/: mapping_common.test
code-ros1/mapping_visualization/: package.xml  setup.py
code/control/: CMakeLists.txt  package.xml  setup.py
code/control/config/: Controller.cfg  PurePursuit.cfg  Velocity.cfg  control.yaml  controller_config.yaml  pure_pursuit_config.yaml  velocity_config.yaml
code/control/control/: pure_pursuit_controller.py  vehicle_control_logic.py  vehicle_controller.py  velocity_control_logic.py  velocity_controller.py
code/control/launch/: control.launch  control.xml
code/control/src/: pure_pursuit_controller copy.py  pure_pursuit_controller.py  stanley_controller.py  vehicle_controller.py  velocity_controller.py
code/mapping/: CMakeLists.txt  DesignDocument_TopDownMap.md  README.md  package.xml  setup.cfg  setup.py
code/mapping/config/: mapping.cfg
code/mapping/ext_modules/: .gitignore  cmake_setup.py  setup.py
code/mapping/ext_modules/mapping_common/: __init__.c  __init__.py  entity.c  entity.pxd  entity.py  filter.py  hero.py  map.c  map.pxd  map.py  markers.py  mask.py  shape.c  shape.pxd  shape.py  transform.c  transform.pxd  transform.py
code/mapping/ext_modules/mapping_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
code/mapping/launch/: mapping.launch  mapping.xml
code/mapping/mapping/: data_integration.py  visualization.py
code/mapping/mapping_common/: .gitignore  __init__.py  entity.py  filter.py  hero.py  map.py  markers.py  mask.py  shape.py  transform.py
code/mapping/msg/: ClusteredLidarPoints.msg  ClusteredPointsArray.msg  Entity.msg  Flags.msg  Map.msg  PointcloudCluster.msg  PointcloudClusterArray.msg  Shape2D.msg  Transform2D.msg  TypeLanemarking.msg
code/mapping/src/: mapping_data_integration.py  path_test.py
code/mapping/src/mapping_common/: __init__.py  entity.py  map.py  shape.py  shapes.py  transform.pxd  transform.py
code/mapping/test/: test_data_integration_tracking_anchor.py
code/mapping/test/test_mapping_common/: test_entity.py  test_general.py  test_map.py  test_shape.py  test_shapely.py  test_transform.py
code/mapping/tests/mapping_common/: test_entity.py  test_general.py  test_shape.py  test_shapely.py  test_transform.py
code/mapping_interfaces/: CMakeLists.txt  package.xml
code/mapping_interfaces/msg/: ClusteredPointsArray.msg  Entity.msg  Map.msg  Motion2D.msg  Shape2D.msg  TrackingInfo.msg  TypeCar.msg
code/mapping_interfaces/srv/: UpdateStopMarks.srv
code/mapping_visualization/: CMakeLists.txt  rviz_panels.xml
code/mapping_visualization/config/: mapping_visualization.cfg
code/mapping_visualization/include/mapping_visualization/: filter_panel.hpp
code/mapping_visualization/launch/: visualization.launch
code/mapping_visualization/resource/: filter_panel.ui
code/mapping_visualization/src/: filter_panel.cpp  visualization.py
code/mapping_visualization/src/mapping_visualization_python/: entity.py  marker_entities.py  visualization.py
code/perception_interfaces/: CMakeLists.txt  package.xml
code/perception_interfaces/msg/: Waypoint.msg
code/planning/: CMakeLists.txt  __init__.py  package.xml  setup.py
code/planning/behavior_agent/launch/: behavior_agent.launch
code/planning/config/: ACC.cfg  BEHAVIOR.cfg  acc_config.yaml  behavior_config.yaml  planning.yaml
code/planning/global_planner/launch/: global_planner.launch
code/planning/global_planner/src/: global_planner.py
code/planning/launch/: planning.dev.persistent.xml  planning.dev.xml  planning.launch  planning.xml
code/planning/local_planner/: CMakeLists.txt  package.xml  setup.py
code/planning/local_planner/launch/: local_planner.launch
code/planning/local_planner/src/: ACC.py  behavior_speed.py  collision_check.py  dev_collision_publisher.py  motion_planning.py
code/planning/msg/: NavigationPoint.msg  Trajectory.msg
code/planning/planning/behavior_agent/: behavior_tree.py  blackboard_utils.py  bt_parameters.py
code/planning/planning/global_planner/: global_plan_distance_publisher.py  global_planner_node.py  position_stability.py  preplanning_trajectory.py  route_alignment.py
code/planning/planning/local_planner/: ACC.py  motion_planning.py  utils.py
code/planning/planning_runner/launch/: planning_runner.launch
code/planning/src/: BehaviourEnum.py.bak
code/planning/src/behavior_agent/: RequestBehaviourChangeService.py  behavior_tree.py
code/planning/src/global_planner/: dev_global_route.py  global_planner.py  global_planner_node.py  global_route.txt  global_route_short.txt  help_functions.py  preplanning_trajectory.py
code/planning/src/local_planner/: ACC.py  ACC_PI_controller.py  ACC_old.py  behavior_speed.py  collision_check.py  dev_collision_publisher.py  motion_planning.py  objects.json  spawn_vehicle.py  test.txt  test_approx_pos.py  test_traj.py  test_utils.py  utils.py
code/planning/srv/: EndOvertake.srv  OvertakeStatus.srv  RequestBehaviourChange.srv  StartOvertake.srv
code/planning/test/: test_intersection_priority_cross_traffic.py
(+1615 files in other folders)
