<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>The mapping package for the intermediate layer</description>
  <maintainer email="peter.viechter@student.uni-augsburg.de">Peter Viechter</maintainer>
  <license>MIT</license>

  <depend>ros2_numpy</depend>
  <depend>mapping_interfaces</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
