<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="peter.viechter@student.uni-augsburg.de">peter</maintainer>
  <license>MIT</license>

  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>py_trees_ros_interfaces</depend>
  <depend>py_trees_ros_viewer</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
